# Computing-at-Scale

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assignment1/: CMakeLists.txt  README.md  assignment1.md
assignment1/source/: CMakeLists.txt  integrationrule.cpp  integrationrule.hpp  integrationrules.hpp  polynomial_integrate.cpp  scalarfunction.cpp  scalarfunction.hpp
assignment1/tests/: CMakeLists.txt  test_driver.cpp  unit_tests.cpp
proposal/: main.tex
test/lns_matrix/: sourceme
